2021冬アニメ計画

--- a/tweet/2021/01.md
+++ b/tweet/2021/01.md
@@ -2,3 +2,69 @@
 
 ## あけおめ
 ことよろ
+
+## 2021冬アニメ
+
+リアタリアタイ(1週間以内)
+
+- 2020-12-07(月) 00:10 進撃の巨人 The Final Season
+- 2021-01-05(火) 00:00 ウマ娘プリティーダービーSeason2
+- 2021-01-06(水) 22:30 Re: ゼロから始める異世界生活 2nd season 後半クール
+- 2021-01-07(木) 23:00 ゆるキャン△ SEASON2
+- 2021-01-07(木) 23:30 はたらく細胞!!
+- 2021-01-08(金) 21:00 弱キャラ友崎くん
+- 2021-01-08(金) 01:28 5等分の花嫁∬
+- 2021-01-10(日) 00:00 はたらく細胞 Black
+- 2021-01-13(水) 00:45 ワールドウィッチーズ 発信します!
+
+その他
+
+show by rock!!stars!!がプリキュアみを感じる。わんちゃんある。
+天地創造デザイン部面白いかもしれない。声優がすき。96猫さんがOP歌ってる。
+オルタンシアサーガ。アニプレ。ファンタジーもの。なんか王道を追ってる感。見ないかな。
+スケートリーディング☆スターズ。スケートのスポーツもの。イケメンがたくさんいる。腐向け??
+ぶらどらぶ。押井守!?声優が神では?ギャグアニメ?楽しそうな作品だ。スルーしてたけど見るかも。ふざけまくってほしい。リアタイ昇格ほぼ確定。
+異世界ピクニック。怖いやつだ。見ない気がする。
+たとえばラストダンジョン前の村の少年が序盤の街で暮らすような物語。キャスト上2人が異世界ピクニックと同じでウケる。こっちは楽しそうな作品だ。俺tueee系?ファンタジー。
+BEASTERS2期。見るなら1期から。怖そう。だけど鬱っぽくはなさそう。3Dすご。ケモノ。
+ゲキドル。アイドルの話かと思ってたけど舞台のお話だ。声優すこ。こみっくがーるず以来だ。あれ、なんだこれ本当に舞台のアニメか?????3Dホログラムを使った演劇なのか。SFっぽい。
+アイ★チュウ。イケメンだ。アイドル。
+エビシー修行日記。ほえ。悠木碧さんだ。見ない。
+装甲娘戦機。異世界転生?DMM。声優すこ。多分見ない。はるかなレシーブ以来だ。そんなことはなかった。放課後さいころ倶楽部に宮下早紀さんでてた。はるかなまた見たくなってしまった。
+約ネバ2期。見るなら1期から。何もわからん。なんか怖そう。押井守だ。CloverWorksなんだ。んん...どうしよ。本当に
+2.43清陰高校男子バレー部。バレーアニメだ。方言が聞ける。多分見ない。
+アイドールズ!。3Dやばば。メディアミックス作品みある。と思ったけどそうでもないか。ちょっと期待。てか3Dすごいな。3Dすごい。
+蜘蛛えすがなにか?。異世界転生もの?くもかわいい。KADOKAWA。悠木碧さん。わんちゃん見るかも。
+俺だけ入れる隠しダンジョン。DMM2本目だ。多分見ない。ひじゃ。若干エッなやつだ。草。
+ブレイタの傷。イケメンだ。見ない。
+WIXOSS DIVA(A)LIVE。カードゲーム。バーチャル空間バトルもの。キャラデザがしぐれうい先生だぞ! 多分見ない。
+バック･アロウ。アニプレ。オリジナル。ファンタジー。ロボット。転生?俺tueee?LiSAさんOP。多分見ない。
+ホリミヤ。CloverWorks。恋愛もの。堀さんと宮村さんでホリミヤ。多分見ない。
+IDOLY PRIDE。アイドルもの。3Dシェーダー!!いい感じ! 姉妹のお話が軸っぽい?花田さんだ! 多分見ない。
+ワールドトリガー2期。見るなら1期から。何年ぶり?中学生のときにやってた気がする。東映。多分見ない。
+SK∞。エスケーエイト。アニプレ。スケート君と無限大の略らしい。スケボのお話?オリジナル。イケメン。多分見ない。
+八十亀ちゃんかんさつにっき 3さつめ。 名古屋のアニメ?コメディ。見るなら1期から。いつか見るかも。今期中には多分見ない。
+怪病医ラムネ。人の心に作用する怪。目からマヨネーズが出たりするらしい。多分見ないけど良さげ。
+怪物事変。けものじへんと読むらしい。親子のお話?泣きアニメっぽい。わんちゃん。バンナム。声優。花守ゆみりさんすごくない?
+のんのんびより のんすとっぷ。見るなら最初から。途中まで見た気がする。にゃんぱすー。リコーダー買ってこなきゃ。citrus OP歌ってたnano.RIPEがOPだ。すこ。なんか急に見なきゃいけない気がしてきたので全部見る機運高まってる。
+エクスアーム。多分見ない。3Dすこくない。死んだけど機械に意識を移された的なお話?好きかも。わんちゃん見る。
+真・中華一番!。料理アニメ。中国料理飯テロ?なんか熱そう。多分見ない。あらすじ全話分公開されてて草。
+無職転生 ～異世界行ったら本気だす～。東宝。ファンタジー。映像すこ。34歳・童貞・無職の引きこもりニート男が覚醒するらしい。なろう系。多分見ない。
+転スラ2期。見るなら1期から。いつか見たい。いつ見ればいい?
+七つの大罪 憤怒の審判。見ない。なんもわからん。見るなら過去作から。しらんけど。EDがReoNaさんだ。
+ワンダーエッグ・プライオリティ。アニプレ。面白そう。CloverWorks。絵がすこ。しゅかしゅーが出てる。なやみちゅう。わんちゃん。
+回復術士のやり直し。ファンタジー。魔法。勇者。vs魔王。ハーレムもの?性格悪そう。嫌いかも。見ない。
+ログ・ホライズン 円卓崩壊。3期らしい。見るなら1期から。多分見ない。NHK。
+文豪ストレイドッグス わん！。みるなら本編1期から。なんもわからん。多分見ない。
+ドクターストーン STONE WARS。みるなら最初から。多分見ないけどいつか見たい。うえいよう。何も知らなかったけど科学の物語なんだ。面白そう。
+魔術士オーフェンはぐれ旅 キムラック編。ファンタジー。魔術。漫画原作で1998年にアニメやってたんだ。多分見ない。今期のは新作らしい。
+闇芝居 8期。なんもわからん。見ない。短編アニメなんだ。日本の都市伝説。
+トロピカル～ジュ！プリキュア。メイクでチェンジ!ムテキのやる気!らしい。トロピカってきた。何もわからん。2月かららしい。
+舞妓さんちのまかないさん。NHK。なんもわからん。
+おとなの防具屋さん 2期。見るなら1期から。多分見ない。なんもわからん。なおぼうがでてる。
+
+テレビはこれで全部。
+期待のクールだ。
+それと3月にはガルパン最終章3話がある。
+映画は、ナナシス、Aria、エヴァ、ヤマトがある。
+映画ドラえもんは宇宙小戦争
