--- a/tweet/2021/01.md
+++ b/tweet/2021/01.md
@@ -5,7 +5,7 @@
 
 ## 2021冬アニメ
 
-リアタリアタイ(1週間以内)
+リアタイ(1週間以内)
 
 - 2020-12-07(月) 00:10 進撃の巨人 The Final Season
 - 2021-01-05(火) 00:00 ウマ娘プリティーダービーSeason2
