--- a/tweet/2021/01.md
+++ b/tweet/2021/01.md
@@ -68,3 +68,10 @@
 それと3月にはガルパン最終章3話がある。  
 映画は、ナナシス、Aria、エヴァ、ヤマトがある。  
 映画ドラえもんは宇宙小戦争  
+
+## 日本酒
+
+明日ははせがわ酒店に行って日本酒を買う予定。  
+今日か。
+11:00開店らしい。起きれるかな。
+その後は14時からあっちゃん家で飲み会。wktk
