--- a/tweet/2021/01.md
+++ b/tweet/2021/01.md
@@ -7,15 +7,15 @@
 
 リアタイ(1週間以内)
 
-- 2020-12-07(月) 00:10 進撃の巨人 The Final Season
-- 2021-01-05(火) 00:00 ウマ娘プリティーダービーSeason2
-- 2021-01-06(水) 22:30 Re: ゼロから始める異世界生活 2nd season 後半クール
-- 2021-01-07(木) 23:00 ゆるキャン△ SEASON2
-- 2021-01-07(木) 23:30 はたらく細胞!!
-- 2021-01-08(金) 21:00 弱キャラ友崎くん
-- 2021-01-08(金) 01:28 5等分の花嫁∬
-- 2021-01-10(日) 00:00 はたらく細胞 Black
-- 2021-01-13(水) 00:45 ワールドウィッチーズ 発信します!
+- 2020-12-07(月) 00:10 進撃の巨人 The Final Season - Amazon Prime video
+- 2021-01-05(火) 00:00 ウマ娘プリティーダービーSeason2 - Amazon Prime video
+- 2021-01-06(水) 22:30 Re: ゼロから始める異世界生活 2nd season 後半クール - ABEMA
+- 2021-01-07(木) 23:00 ゆるキャン△ SEASON2 - ABEMA, Amazon Prime video
+- 2021-01-07(木) 23:30 はたらく細胞!! - ABEMA, Amazon Prime video
+- 2021-01-08(金) 21:00 弱キャラ友崎くん - ABEMA, Amazon Prime video
+- 2021-01-08(金) 01:28 5等分の花嫁∬- ABEMA
+- 2021-01-10(日) 00:00 はたらく細胞 Black - ABEMA, Amazon Prime video
+- 2021-01-13(水) 00:45 ワールドウィッチーズ 発信します! - ABEMA, Amazon Prime video
 
 その他
 
