リーダブルコードを読みはじめた回

--- a/tweet/2021/01.md
+++ b/tweet/2021/01.md
@@ -84,3 +84,11 @@
 ## そういえばおとといくらいに家で初めてビール飲んだけど、日本酒のほうが美味しいなってなった
 
 日本酒飲みたい。
+
+## リーダブルコードを読んでいる
+
+積ん読してた。  
+メンター1on1で勧めていただいてやっと本腰が入った。  
+50%くらい読み終わったけれど、良い感じ。  
+全然古くなくて今でも十分に効果を発揮できる内容だと思う。  
+今まで自分が書いたコードをレビューしていただいたときに読みにくいと思われていた事を理解できはじめていると思う。  
